[gd_scene load_steps=3 format=3 uid="uid://u7y560ynke5d"]

[ext_resource type="Script" uid="uid://oj1b60330jln" path="res://modals/keypad_modal.gd" id="1_rqb40"]
[ext_resource type="Script" uid="uid://xhgekpfwcoyl" path="res://modals/line_edit.gd" id="2_0pdi7"]

[node name="InputModal" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rqb40")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Modal" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -64.5
offset_right = 60.0
offset_bottom = 64.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Modal"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Modal/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 8
alignment = 1

[node name="HeaderLabel" type="Label" parent="Modal/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Enter Input"

[node name="HBoxContainer" type="HBoxContainer" parent="Modal/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LineEdit" type="LineEdit" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
placeholder_text = "Type..."
max_length = 25
expand_to_text_length = true
caret_blink = true
script = ExtResource("2_0pdi7")

[node name="HBoxContainer2" type="HBoxContainer" parent="Modal/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="CancelButton" type="Button" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Cancel"

[node name="ConfirmButton" type="Button" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Confirm"
